[gd_scene load_steps=2 format=3 uid="uid://pu5w042o5qnq"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_4e80d"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_4e80d")

[node name="MainContainer" type="VBoxContainer" parent="."]
offset_left = 372.0
offset_top = 234.0
offset_right = 759.0
offset_bottom = 484.0

[node name="Text" type="Button" parent="MainContainer"]
layout_mode = 2
text = "MAIN MENU"

[node name="InfiniteButton" type="Button" parent="MainContainer"]
layout_mode = 2
text = "Infinite Shooting"

[node name="BottleButton" type="Button" parent="MainContainer"]
layout_mode = 2
text = "Beer Bottle Shooting"
